fix map z-index

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 400px;
     margin: 0;
+    z-index: 0;
 }
 
 #records_summary_table {
